[gd_scene load_steps=9 format=3 uid="uid://mb32hps3uwxd"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_bc2pa"]
[ext_resource type="Texture2D" uid="uid://b4a4uyq7puli" path="res://static/background/menu_background.jpg" id="2_2ibmo"]
[ext_resource type="FontFile" uid="uid://dka1g6k5vpcco" path="res://static/8bit-Font/PressStart2P-vaV7.ttf" id="3_gv07s"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4y7vq"]
texture = ExtResource("2_2ibmo")
modulate_color = Color(0.351563, 0.351563, 0.351563, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fcdpr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bv64x"]
bg_color = Color(0.149558, 0.204784, 0.561486, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4pd0"]
bg_color = Color(0.0827821, 0.119793, 0.363213, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_und21"]
bg_color = Color(0.202576, 0.272896, 0.705924, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10
shadow_offset = Vector2(5, 5)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bc2pa")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00249)
theme_override_styles/panel = SubResource("StyleBoxTexture_4y7vq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -124.0
offset_right = 228.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Music_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volue"

[node name="Music_Slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="SFX_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sound Effets Volume"

[node name="SFX_Slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="Mute" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Mute"
flat = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Mute"]
show_behind_parent = true
layout_mode = 0
offset_top = 1.0
offset_right = 70.0
offset_bottom = 31.0
color = Color(0.72549, 0.560784, 0.709804, 0.345098)

[node name="ExitOptionsButton" type="Button" parent="."]
layout_mode = 2
offset_left = 350.0
offset_top = 409.0
offset_right = 804.0
offset_bottom = 461.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_gv07s")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcdpr")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv64x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4pd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_und21")
text = "Back
"

[node name="OptionsTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -306.0
offset_right = 308.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 30
theme_override_fonts/font = ExtResource("3_gv07s")
theme_override_font_sizes/font_size = 48
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.0
offset_top = -203.0
offset_right = 391.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998221, 0.995781)
theme_override_font_sizes/normal_font_size = 16
text = "Holy Ships! is a LAN co-op multiplayer mobile phone game. 

Titan (your home) is dying rapidly. The only hope is a race to Europa, where a drifter located in the town of Pancea may be able to help. However, the journey to get here is no easy task. This is where the game begins. 

You will need to cooperate and communicate effectively to outsteer obstacles and maintain/repair your aging spacecraft. 

Good luck, have fun, and work together!
 (More Options To Come)"

[connection signal="value_changed" from="VBoxContainer/Music_Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFX_Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="ExitOptionsButton" to="." method="_on_exit_options_button_pressed"]
